# tdpclient

./: Cargo.toml  README.md  commands.txt  dockerfileprocessor
adapter/: Cargo.toml  app_adpater.ini
adapter/src/: common.rs  main.rs
adapteryaml/: deployment.yaml  dockerfileadapter
applib/: Cargo.toml
applib/benches/: bench_xml_merge.rs
applib/src/: lib.rs  lib_bak.rs  xmlutil.rs
processor/: Cargo.toml  app.ini
processor/src/: common.rs  definitions.rs  main.rs  processing.rs
processoryaml/: deployment.yaml  dockerfileprocessor
supplier/: Cargo.toml
supplier/src/: filehandling.rs  main.rs
supplieryaml/: deployment.yaml  dockerfilesupplier
