[package]
name = "applib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
quick-xml = "0.32.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

[dev-dependencies]
criterion = "0.4"
mockito = "1.4.0"

[[bench]]
name = "bench_xml_merge"
harness = false
